--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Página de prueba<title>
+</head>
+<body>
 <h2>冷战(Cold War)</h2>
     <ul>
        <li> <a href="contents/ch1.html">Chapter 1</a></li>
     </ul>
     <p><br>
     </p>
-
+</body>
+</html>
