--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Página de prueba<title>
+  <title>Página de prueba</title>
 </head>
 <body>
 <h2>冷战(Cold War)</h2>
